be/src/transport/THttpTransport.cpp
@@ -85,9 +85,6 @@ uint32_t THttpTransport::readEnd() {
 uint32_t THttpTransport::readMoreData() {
   uint32_t size;
 
-  // Get more data!
-  refill();
-
   if (readHeaders_) {
     readHeaders();
   }
